[package]
name = "mina-indexer"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "mina-indexer"
test = true
bench = false

[[bin]]
name = "mainnet-test"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-trait = "0.1.64"
futures = "0.3.26"
futures-util = "0.3.26"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = { version = "1.0.92", features = ["raw_value"] }
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.38"
glob = "0.3.1"
bin-prot = { path = "./mina-rs/protocol/bin-prot", version = "0.1.0" }
mina-serialization-types = { path = "./mina-rs/protocol/serialization-types", version = "0.1.0" }
versioned = { path = "./mina-rs/protocol/versioned", version = "0.1.0" }
mina-signer = { path = "./mina-rs/proof-systems/signer", version = "0.1.0" }
rocksdb = { default-features = false, version = "0.21.0" }
id_tree = { version = "1.8.0", features = ["serde_support"] }
watchexec = "2.3.0"
async-priority-channel = "0.1.0"
interprocess = { version = "1.2.1", features = ["tokio", "tokio_support"] }
uuid = { version = "1.3.1", features = ["v4"] }
time = { version = "0.3.20", features = ["serde", "serde-human-readable"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bytesize = "1.2.0"
rust_decimal = { version = "1.33.1", features = ["serde"] }
rust_decimal_macros = "1.33.1"
bs58 = { version = "0.5.0", features = ["check"] }
blake2 = "0.10.6"
ctrlc = "3.4.0"
serde_yaml = "0.9.29"
oneshot = "0.1.5"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[profile.release]
lto = "fat"
incremental = true

[profile.dev]
lto = "off"
