[package]
name = "mina-indexer"
version = "0.0.1"
edition = "2021"
default-run = "staking"

[dependencies]
log = "0.4"
env_logger = "0.11"
sonic-rs = "0.3"
bigdecimal = "0.4.6"
sha2 = "0.10.8"
tokio-postgres = "=0.7.12"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.83"
duckdb = "1.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
rayon = "1.10"
walkdir = "2.5"
tracing = "0.1.40"
bs58 = { version = "0.5.1", features = ["check"] }
strum_macros = "0.26"

[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "staking"
path = "src/bin/ingest_staking_ledgers.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest_blocks_v2.rs"

[[bin]]
name = "ingestion"
path = "src/bin/ingest_blocks.rs"
