[package]
name = "mina-indexer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mina-indexer"
test = true
bench = false

[features]
# required for tests - see https://github.com/rust-lang/cargo/issues/2911
default = ["loose_deserialization"]
loose_deserialization = []
mina_rs = []
tier2 = []
browser = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1.0.97", default-features = false }
# https://github.com/bincode-org/bincode/issues/674
bincode = "=2.0.0-rc.3"
derive_more = { version = "~0.99", default-features = false }
serde = { version = "1.*", default-features = false }
serde_json = { version = "1.*", default-features = false, features = ["unbounded_depth"] }
smart-default = { version = "0.*", default-features = false }
clap = { version = "4.*", default-features = false, features = ["help", "usage", "std", "derive", "string"] }
thiserror = { version = "1.*", default-features = false }
glob = { version = "0.*", default-features = false }
mina_serialization_proc_macros = { path = "mina_serialization_macros/proc_macros" }
mina_serialization_versioned = { path = "mina_serialization_macros/versioned" }
ark-ec = { version = "0.3.*", default-features = false }
ark-ff = { version = "0.3.*", default-features = false }
sha2 = { version = "0.*", default-features = false }
hex = { version = "0.*", default-features = false, features = ["alloc"] }
byteorder = { version = "1.*", default-features = true }
num = { version = "0.*", default-features = true, features = ["num-bigint"] }
speedb = { version = "0.*", default-features = false, features = ["zstd"] }
id_tree = { version = "1.*", default-features = false }
time = { version = "0.*", default-features = false }
log = { version = "0.*", default-features = false }
stderrlog = { version = "0.*", default-features = true }
bytesize = { version = "1.*", default-features = true }
rust_decimal = { version = "1.*", default-features = false }
rust_decimal_macros = { version = "1.*", default-features = false }
blake2 = { version = "0.*", default-features = false }
bs58 = { version = "0.*", default-features = false, features = ["check", "std"]}
tempfile = { version = "3.*", default-features = false }
actix-web = { version = "4.9.0", default-features = false , features = ["macros"] }
actix-cors = { version = "=0.7.0", default-features = false }
async-graphql = { version = "7.*", default-features = false, features = ["graphiql"] }
async-graphql-actix-web = { version = "7.0" }
base64 = { version = "0.22.1", default-features = false }
hex-literal = "0.4.1"
chrono = { version = "0.4.38", default-features = false }
csv = "1.3.0"
notify = { version = "8.*", default-features = false, features = ["macos_fsevent"] }
tar = "0.4.41"
libc = "0.2.158"
tokio-graceful-shutdown = { version = "0.*", default-features = false }
flate2 = "1.0.35"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
pretty_assertions = "1.4.1"
wasm-bindgen-test = "0.3.43"
lazy_static = "1.5.0"
serde_stacker = "0.1.11"
rayon = "1.10.0"

[dependencies.tokio]
version = "1.*"
features = ["macros", "rt-multi-thread"]
default-features = false

[profile.release]
lto = "fat"
incremental = true

[profile.dev]
debug = 0
strip = "debuginfo"
