[package]
authors = ["Granola <hello@granola.team>"]
name = "mina_serialization_proc_macros"
version = "1.0.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { features = ["full"], version = "2.0.50" }

[dev-dependencies]
mina_serialization_versioned = { path = "../versioned" }
derive_more = "0.99.17"

[lib]
proc-macro = true
